src/test/ui/borrowck/borrowck-auto-mut-ref-to-immut-var.stderr
error[E0596]: cannot borrow immutable local variable `x` as mutable
  --> $DIR/borrowck-auto-mut-ref-to-immut-var.rs:15:5
   |
LL |     let x = Foo { x: 3 };
   |         - help: make this binding mutable: `mut x`
LL |     x.printme();
   |     ^ cannot borrow mutably

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
